# Dukko

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  LICENSES.md  README.md
.github/workflows/: build_and_test.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-build-foundation-ci/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-HUMAN-UAT.md  01-RESEARCH.md  01-REVIEW.md  01-VALIDATION.md  01-VERIFICATION.md  PHASE-SUMMARY.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
cmake/: Assets.cmake  Benchmarks.cmake  DukkoIPP.cmake  DukkoLog.cmake  DukkoMacOS.cmake  DukkoVersion.cmake  GitHubENV.cmake  JUCEDefaults.cmake  SharedCodeDefaults.cmake  Tests.cmake  XcodePrettify.cmake
packaging/: distribution.xml.template  dmg.json
packaging/resources/: README
source/: PluginProcessor.cpp  PluginProcessor.h
tests/: PluginBasics.cpp
tests/helpers/: test_helpers.h
